--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cloud-computing-backend",
+  "name": "stuntguard-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon server.js"
@@ -19,9 +19,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
