--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StuntGuard"
         tools:targetApi="31">
+        <activity
+            android:name=".profile.family.AddChildActivity"
+            android:exported="false" />
+        <activity
+            android:name=".profile.family.FamMemberActivity"
+            android:exported="false" />
+        <activity
+            android:name=".news.DetailNewsActivity"
+            android:exported="false" />
         <activity
             android:name=".prediksi.result.ResultActivity"
             android:exported="false" />
